# verse

./: .editorconfig  .gitignore  Cargo.toml  check.md  pnpm-lock.yaml  pyproject.toml  requirements.txt
apps/captions/: .env.example  Dockerfile  __init__.py  consumer.py  consumer.sh  kafka_producer.py  main.py  publisher.py  run.sh  transcriber.py  worker.sh
apps/client/: Dockerfile  eslint.config.js  nginx.conf  package.json  tailwind.config.ts  tsconfig.app.json
apps/client/src/: App.tsx  index.css  main.tsx  router.tsx
apps/client/src/components/: app-sidebar.tsx  chat.tsx  dms-sidebar.tsx  groups-sidebar.tsx  nav-main.tsx  nav-user.tsx  org-switcher.tsx  theme-provider.tsx
apps/server/: .env.example  Dockerfile  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
apps/server/drizzle/: 0000_absurd_catseye.sql  0000_right_night_thrasher.sql  0000_steep_skullbuster.sql  0001_whole_moonstone.sql
apps/server/src/: index.ts
apps/workers/captioning/: Cargo.toml
apps/workers/ocr/: Cargo.toml
blobs/: arch.md
crates/config/: Cargo.toml
crates/config/src/: db.rs  lib.rs  minio.rs  ollama.rs  redis.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  logger.rs  response.rs  worker_error.rs
docker/: docker-compose.yaml
docker/compose/coturn/: compose.yaml  turnserver.conf
docker/compose/kafka/: compose.yaml  register-connector.sh
docker/compose/livekit/: compose.yaml  livekit.yaml
docker/compose/minio/: compose.yaml
docker/compose/postgres/: compose.yaml
docker/compose/whisper/: compose.yaml
docs/: ARCHITECTURE.md  FEATURES.md
kubeedge/: README.md  deploy.sh  namespace.yaml
kubeedge/cloud/: client-configmap.yaml  coturn-configmap.yaml  coturn.yaml  livekit.yaml  minio.yaml  postgres.yaml  secrets.yaml
kubeedge/edge/: captions.yaml  client.yaml  server.yaml
(+113 files in other folders)
